--- a/accompany-consullting/src/app/eval-rh-integration/eval-rh-integration.component.html
+++ b/accompany-consullting/src/app/eval-rh-integration/eval-rh-integration.component.html
@@ -1,3 +1,6 @@
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <mat-card>
 
 <mat-toolbar style="background-color: #1347a4;">
@@ -32,7 +35,111 @@
 </table>
 </mat-card>
 <form [formGroup]="evaluationForm" (ngSubmit)="onSubmit()">
-  <app-mission [evaluationId]="evaluation.id"></app-mission>
+  <div *ngFor="let mission of missions">
+    
+    <table style="width: 100%;">
+      <td colspan="6">
+        <mat-toolbar style="background-color: #1e5d6b; color: antiquewhite;">
+          <mat-toolbar-row>
+            <div class="mission-info">
+              <span>Missions:</span>
+              <mat-icon class="material-icons">assignment</mat-icon>
+              <input type="text" class="form-control" id="titre" value="{{mission.titre}}" required placeholder="Titre">
+            </div>
+            <div class="chef-projet-info">
+              <span>Chef de projet:</span>
+              <input type="text" class="form-control" id="manager" value="{{mission.nomManager}}" placeholder="Email du chef de projet">
+            </div>
+          </mat-toolbar-row>
+        </mat-toolbar>
+      </td>
+      <tbody>
+        <tr>
+          <td style=" text-indent:  50px;
+          font-size:large;
+          font-family: Georgia, serif;
+          color: #24527a;">Critères</td>
+          <td style=" text-indent:  50px;
+          font-size:large;
+          font-family: Georgia, serif;
+          color: #24527a;">Consultant</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Roles et responsabilités</td>
+          <td>
+            <select id="roleC" formControlName="roleC" required>
+              <option value="">Sélectionnez une option</option>
+              <option value="Très satisfait">Très satisfait</option>
+              <option value="Satisfait">Satisfait</option>
+              <option value="Moyennement satisfait">Moyennement satisfait</option>
+              <option value="Insuffisant">Insuffisant</option>
+              
+            </select>
+          </td>
+          <td>
+         
+            <textarea class="form-control border" placeholder="Laissez un commentaire ici" id="floatingTextarea2" formControlName="roleRH" required style="height: 100px ; width: 500px ;"></textarea>
+
+          </td>
+        </tr>
+        <tr>
+          <td>Relation avec client</td>
+          <td>
+            <select id="relationClientC" formControlName="relationClientC" required>
+              <option value="">Sélectionnez une option</option>
+              <option value="Très satisfait">Très satisfait</option>
+              <option value="Satisfait">Satisfait</option>
+              <option value="Moyennement satisfait">Moyennement satisfait</option>
+              <option value="Insuffisant">Insuffisant</option>
+              
+            </select>
+          </td>
+          <td>
+         
+            <textarea class="form-control border" placeholder="Laissez un commentaire ici" id="floatingTextarea2" formControlName="relationClientRH" required style="height: 100px ; width: 500px ;"></textarea>
+
+          </td>
+        </tr>
+        <tr>
+          <td>Charge (surcharge / Baisse de charge)</td>
+          <td>
+            <select id="chargeC" formControlName="chargeC" required>
+              <option value="">Sélectionnez une option</option>
+              <option value="Très satisfait">Très satisfait</option>
+              <option value="Satisfait">Satisfait</option>
+              <option value="Moyennement satisfait">Moyennement satisfait</option>
+              <option value="Insuffisant">Insuffisant</option>
+              
+            </select>
+          </td>
+          <td>
+ 
+            <textarea class="form-control border" placeholder="Laissez un commentaire ici" id="floatingTextarea2" formControlName="chargeRH" required style="height: 100px ; width: 500px ;"></textarea>
+
+          </td>
+        </tr>
+        <tr>
+          <td>Satisfaction Globale</td>
+          <td>
+            <select id="satisficationC" formControlName="satisficationC" required>
+              <option value="">Sélectionnez une option</option>
+              <option value="Très satisfait">Très satisfait</option>
+              <option value="Satisfait">Satisfait</option>
+              <option value="Moyennement satisfait">Moyennement satisfait</option>
+              <option value="Insuffisant">Insuffisant</option>
+              
+            </select>
+          </td>
+          <td>
+            
+            <textarea class="form-control border" placeholder="Laissez un commentaire ici" id="floatingTextarea2" formControlName="satisficationRH" required style="height: 100px ; width: 500px ;"></textarea>
+
+          </td>
+        </tr>
+      </tbody>
+    </table>
+</div>  
   <!-- ----------------------------1 partie -------------------------->
 <mat-card *ngIf="consultantData.evaluationType === 'Intégration 3 mois'">
   <mat-toolbar color="accent" >
@@ -60,7 +167,7 @@
           <option value="Satisfait">Satisfait</option>
           <option value="Moyennement satisfait">Moyennement satisfait</option>
           <option value="Insuffisant">Insuffisant</option>
-          <option value="">-</option>
+          
         </select></td>
         <td> <select formControlName="admRH">
           <option value="">Sélectionnez une option</option>
@@ -68,7 +175,7 @@
           <option value="Satisfait">Satisfait</option>
           <option value="Moyennement satisfait">Moyennement satisfait</option>
           <option value="Insuffisant">Insuffisant</option>
-          <option value="">-</option>
+          
         </select> </td>
       </tr>
       <tr >
@@ -79,7 +186,7 @@
           <option value="Satisfait">Satisfait</option>
           <option value="Moyennement satisfait">Moyennement satisfait</option>
           <option value="Insuffisant">Insuffisant</option>
-          <option value="">-</option>
+          
         </select></td>
         <td> <select formControlName="communicationRH">
           <option value="">Sélectionnez une option</option>
@@ -87,7 +194,7 @@
           <option value="Satisfait">Satisfait</option>
           <option value="Moyennement satisfait">Moyennement satisfait</option>
           <option value="Insuffisant">Insuffisant</option>
-          <option value="">-</option>
+          
         </select> </td>
       </tr>
       <tr >
@@ -98,7 +205,7 @@
           <option value="Satisfait">Satisfait</option>
           <option value="Moyennement satisfait">Moyennement satisfait</option>
           <option value="Insuffisant">Insuffisant</option>
-          <option value="">-</option>
+          
         </select></td>
         <td> <select formControlName="esprit_equipeRH" >
           <option value="">Sélectionnez une option</option>
@@ -106,7 +213,7 @@
           <option value="Satisfait">Satisfait</option>
           <option value="Moyennement satisfait">Moyennement satisfait</option>
           <option value="Insuffisant">Insuffisant</option>
-          <option value="">-</option>
+          
         </select> </td>
       </tr>
     </tbody>
@@ -268,7 +375,7 @@
           <option value="Satisfait">Satisfait</option>
           <option value="Moyennement satisfait">Moyennement satisfait</option>
           <option value="Insuffisant">Insuffisant</option>
-          <option value="">-</option>
+          
         </select></td>
         <td><select formControlName="projet_interneRH">
           <option value="">Sélectionnez une option</option>
@@ -276,7 +383,7 @@
           <option value="Satisfait">Satisfait</option>
           <option value="Moyennement satisfait">Moyennement satisfait</option>
           <option value="Insuffisant">Insuffisant</option>
-          <option value="">-</option>
+          
         </select> </td>
       </tr>
       <tr >
@@ -287,7 +394,7 @@
           <option value="Satisfait">Satisfait</option>
           <option value="Moyennement satisfait">Moyennement satisfait</option>
           <option value="Insuffisant">Insuffisant</option>
-          <option value="">-</option>
+          
         </select></td>
         <td><select formControlName="dev_commercialRH" >
           <option value="">Sélectionnez une option</option>
@@ -295,7 +402,7 @@
           <option value="Satisfait">Satisfait</option>
           <option value="Moyennement satisfait">Moyennement satisfait</option>
           <option value="Insuffisant">Insuffisant</option>
-          <option value="">-</option>
+          
         </select></td>
       </tr>
       <tr >
@@ -307,7 +414,7 @@
           <option value="Satisfait">Satisfait</option>
           <option value="Moyennement satisfait">Moyennement satisfait</option>
           <option value="Insuffisant">Insuffisant</option>
-          <option value="">-</option>
+          
         </select></td>
         <td><select formControlName="vie_cabinetRH">
           <option value="">Sélectionnez une option</option>
@@ -315,7 +422,7 @@
           <option value="Satisfait">Satisfait</option>
           <option value="Moyennement satisfait">Moyennement satisfait</option>
           <option value="Insuffisant">Insuffisant</option>
-          <option value="">-</option>
+          
         </select> </td>
       </tr>
     </tbody>
